--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <title>Project WebChat</title>
 </head>
 <body>
-  <ul id="messages" data-testid="message"></ul>
+  <ul id="messages" ></ul>
   <form action="">
     <input id="messageInput" data-testid="message-box" autocomplete="off" /><button data-testid="send-button">Send</button>
   <script src="/socket.io/socket.io.js"></script>
