fix: :rocket: Agora vai

--- a/public/index.html
+++ b/public/index.html
@@ -35,8 +35,8 @@
   >
     Enviar
   </button>
-
+  <ul id='news'></ul>
+  <script src='/socket.io/socket.io.js'></script>
+  <script src="./script/client.js"></script>
 </body>
-<script src="/socket.io/socket.io.js"></script>
-<script src='../assets/client.js'></script>
 </html>
