feat: :sparkles: Requisito 1 finalmente

--- a/public/index.html
+++ b/public/index.html
@@ -21,7 +21,7 @@
     Salvar
   </button>
   <ul id="userList"></ul>
-  <ul id="message"></ul>
+  <ul id="messages"></ul>
   <input
     type="text"
     placeholder="Digite uma nova mensagem aqui"
