add layout and others inputs for front-end

--- a/public/index.html
+++ b/public/index.html
@@ -9,11 +9,10 @@
     <h1>Vini Chat</h1>
     <div class="middle-items">
       <div class="side-intems">
-        <div class="nickname-form">
-          <form action="">
-            <input type="text"><button id="nicknameButton" type="button">Save</button>
-          </form>
-        </div>
+        <form action="" class="nickname-form">
+          <input type="text" placeholder="Digite seu nickname">
+          <button id="nicknameButton" type="button">Save</button>
+        </form>
         <div class="user-list">
           <ul>
             <li>hello</li>
@@ -22,7 +21,7 @@
           </ul>
         </div>
       </div>
-      <div><ul class="chat"></ul></div>
+      <ul class="chat"></ul>
     </div>
     <form action="" class="form-msg">
       <input class="msgInput" type="text"/><button class="sendButton" type="button">Send</button>
