--- a/public/chat.html
+++ b/public/chat.html
@@ -9,10 +9,7 @@
     <form id="form" action="">
       <input id="input" autocomplete="off" /><button>Send</button>
     </form>
-    
     <script src="/socket.io/socket.io.js"></script>
-    <script>
-      const socket = io()
-    </script>
+    <script src="script.js"></script>
   </body>
 </html>
