--- a/public/chat.html
+++ b/public/chat.html
@@ -5,9 +5,9 @@
     <link rel="stylesheet" href="./chat.css">
   </head>
   <body>
-    <ul id="messages"></ul>
-    <form id="form" action="">
-      <input id="input" autocomplete="off" /><button>Send</button>
+    <ul class="messages"></ul>
+    <form class="form" action="">
+      <input class="input" autocomplete="off" /><button>Send</button>
     </form>
     <script src="/socket.io/socket.io.js"></script>
     <script src="script.js"></script>
