Created the css for chat.html

--- a/public/chat.html
+++ b/public/chat.html
@@ -5,7 +5,7 @@
     <link rel="stylesheet" href="./css/chat.css">
   </head>
   <body>
-    <ul id="messages"></ul>
+    <ul class="messages"></ul>
     <form action="">
       <input id="messageInput" autocomplete="off" /><button>Enviar</button>
     </form>
