Created a CSS for login page and change some infos

--- a/public/login.html
+++ b/public/login.html
@@ -12,14 +12,14 @@
     <div class="form">
       <form class="login-form" action="room.html">
         <input type="text" placeholder="username" name="username" />
-        <select name="room" id="room">
+        <!-- <select name="room" id="room">
           <option value="Cinema">Cinema</option>
           <option value="Esporte">Esporte</option>
           <option value="Tecnologia">Tecnologia</option>
           <option value="Música">Música</option>
           <option value="Memes">Memes</option>
-        </select>
-        <button>Entrar na sala</button>
+        </select> -->
+        <button>Entrar</button>
       </form>
     </div>
   </div>
