feat: :sparkles: Requisito 2

--- a/public/index.html
+++ b/public/index.html
@@ -7,6 +7,9 @@
 </head>
 <body>
   <h1>WebChat</h1>
+  <span
+    id="greeting"
+  ></span>
   <input
     type="text"
     placeholder="Insira seu nickname"
