--- a/public/chat.html
+++ b/public/chat.html
@@ -9,6 +9,8 @@
     <form action="">
       <input id="messageInput" autocomplete="off" /><button>Enviar</button>
     </form>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/qs/6.9.2/qs.min.js"
+    integrity="sha256-TDxXjkAUay70ae/QJBEpGKkpVslXaHHayklIVglFRT4=" crossorigin="anonymous"></script>
     <script src="/socket.io/socket.io.js"></script>
     <script src='./js/chat.js'></script>
   </body>
