fix: some informations to the login page

--- a/public/login.html
+++ b/public/login.html
@@ -10,7 +10,7 @@
 <body>
   <div class="login-page">
     <div class="form">
-      <form class="login-form" action="room.html">
+      <form class="login-form" action="chat.html">
         <input type="text" placeholder="username" name="username" />
         <!-- <select name="room" id="room">
           <option value="Cinema">Cinema</option>
