fix: change the way about information is passed for the sockets

--- a/public/chat.html
+++ b/public/chat.html
@@ -10,7 +10,7 @@
         Nickname:
         <input id="userNickname" data-testid="nickname-box" autocomplete="off" />
       </label>
-      <button id="saveNickname" data-testid="nickname-button" onclick="changeNickname()">Salvar</button>
+      <button id="saveNickname" data-testid="nickname-button" >Salvar</button>
     </div>
     <ul class="messages"></ul>
     <form action="">
