--- a/public/chat.html
+++ b/public/chat.html
@@ -13,7 +13,7 @@
 
     <form action="" id='form-msg'>
       <input id='messageInput' autocomplete='off' data-testid="message-box">
-        <button id='btn-msg' >Enviar</button>
+        <button id='btn-msg' data-testid="send-button">Enviar</button>
     </form>
 
     <div id='box-clients' >
