--- a/public/index.html
+++ b/public/index.html
@@ -3,43 +3,78 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.rtl.min.css" integrity="sha384-+qdLaIRZfNu4cVPK/PxJJEy0B0f3Ugv8i482AKY7gwXwhaCroABd086ybrVKTa0q" crossorigin="anonymous">
+  <link rel="stylesheet" href="style.css">
   <title>WebChat</title>
 </head>
 <body>
-  <h1>WebChat</h1>
-  <span
-    id="greeting"
-  ></span>
-  <input
-    type="text"
-    placeholder="Insira seu nickname"
-    data-testid="nickname-box"
-    id="nicknameBox"
-  >
-  <button 
-    type="submit"
-    data-testid="nickname-button"
-    id="nicknameButton"
-  >
-    Salvar
-  </button>
-  <ul id="userList"></ul>
-  <ul id="messages"></ul>
-  <input
-    type="text"
-    placeholder="Digite uma nova mensagem aqui"
-    data-testid="message-box"
-    id="messageBox"
-  >
-  <button 
-    type="submit"
-    data-testid="send-button"
-    id="sendButton"
-  >
-    Enviar
-  </button>
-  <ul id='news'></ul>
+  <div class="container">
+    <div class="row text-center bg-success p-2 text-dark bg-success my-2 rounded">
+      <h3>WebChat</h3>
+    </div>
+    <div class="row heigth">
+      <div class="col text-center">
+        <h5>Usuários Conectados</h5>
+        <span class="list-group list-group-flush" id="userList"></span>
+      </div>
+      <div class="col text-center border border-1 rounded">
+        <span id="messages" class="list-group list-group-flush text-center"></span>
+      </div>
+      <div class="col text-center">
+        <div class="input-group mb-3">
+          <input
+            type="text"
+            placeholder="Insira seu nickname"
+            data-testid="nickname-box"
+            id="nicknameBox"
+            class="form-control rounded"
+          >
+          <div class="input-group-append">
+            <button 
+            type="submit"
+            data-testid="nickname-button"
+            id="nicknameButton"
+            class="btn btn-success"
+            >
+            Salvar
+            </button>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="row">
+      <div class="col text-center">
+      </div>
+      <div class="col text-center">
+        <div class="input-group mb-3 mt-2">
+          <input
+          type="text"
+          placeholder="Digite uma nova mensagem aqui"
+          data-testid="message-box"
+          id="messageBox"
+          class="form-control rounded"
+          >
+          <div class="input-group-append">
+            <button 
+              type="submit"
+              data-testid="send-button"
+              id="sendButton"
+              class="btn btn-success"
+            >
+            Enviar
+            </button>
+          </div>
+        </div>
+      </div>
+      <div class="col text-center">
+      </div>
+    </div>
+  </div>
+</div>
+
+
   <script src='/socket.io/socket.io.js'></script>
   <script src="./script/client.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
 </body>
 </html>
