--- a/public/index.html
+++ b/public/index.html
@@ -7,6 +7,7 @@
 </head>
 <body>
   <h1 style="color:blue;">WebChat</h1>
+  <span id="greeting"></span>
   <div style="display:flex">
     <div style="background-color: yellow;">
       <input
