--- a/public/index.html
+++ b/public/index.html
@@ -4,23 +4,25 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.rtl.min.css" integrity="sha384-+qdLaIRZfNu4cVPK/PxJJEy0B0f3Ugv8i482AKY7gwXwhaCroABd086ybrVKTa0q" crossorigin="anonymous">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.3.0/font/bootstrap-icons.css">
   <link rel="stylesheet" href="style.css">
   <title>WebChat</title>
 </head>
 <body>
   <div class="container">
-    <div class="row text-center bg-success p-2 text-dark bg-success my-2 rounded">
-      <h3>WebChat</h3>
+    <div class="row text-center bg-success bg-gradient p-2 my-2 rounded">
+      <h3 style='color: white;'>WebChat 
+        <i class="bi bi-chat" style='color: white;'></i>
+      </h3>
     </div>
     <div class="row heigth">
-      <div class="col text-center">
-        <h5>Usuários Conectados</h5>
-        <span class="list-group list-group-flush" id="userList"></span>
-      </div>
-      <div class="col text-center border border-1 rounded">
-        <span id="messages" class="list-group list-group-flush text-center"></span>
+      <div class="col-8 text-center border border-1 rounded scroll">
+        <div id="messages" data-bs-spy="scroll" class="text-end flex-column align-items-end m-2"></div>
       </div>
       <div class="col text-center">
+        <h5>Usuários Conectados
+          <i style="font-size: 2rem" class="bi bi-people"></i>
+        </h5>
         <div class="input-group mb-3">
           <input
             type="text"
@@ -29,23 +31,22 @@
             id="nicknameBox"
             class="form-control rounded"
           >
-          <div class="input-group-append">
+          <div class="input-group-append me-2">
             <button 
             type="submit"
             data-testid="nickname-button"
             id="nicknameButton"
-            class="btn btn-success"
+            class="btn btn-success bg-success bg-gradient"
             >
             Salvar
             </button>
           </div>
         </div>
+        <span class="list-group list-group-flush" id="userList"></span>
       </div>
     </div>
     <div class="row">
-      <div class="col text-center">
-      </div>
-      <div class="col text-center">
+      <div class="col-8 text-center">
         <div class="input-group mb-3 mt-2">
           <input
           type="text"
@@ -54,12 +55,12 @@
           id="messageBox"
           class="form-control rounded"
           >
-          <div class="input-group-append">
+          <div class="input-group-append me-2">
             <button 
               type="submit"
               data-testid="send-button"
               id="sendButton"
-              class="btn btn-success"
+              class="btn btn-success bg-success bg-gradient"
             >
             Enviar
             </button>
@@ -71,10 +72,8 @@
     </div>
   </div>
 </div>
-
-
-  <script src='/socket.io/socket.io.js'></script>
-  <script src="./script/client.js"></script>
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
+<script src='/socket.io/socket.io.js'></script>
+<script src="./script/client.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
 </body>
 </html>
