style: :lipstick: Change buttons style

--- a/public/index.html
+++ b/public/index.html
@@ -38,7 +38,7 @@
             id="nicknameButton"
             class="btn btn-success bg-success bg-gradient"
             >
-            Salvar
+            <i class="bi bi-pencil-square"></i>
             </button>
           </div>
         </div>
@@ -62,7 +62,7 @@
               id="sendButton"
               class="btn btn-success bg-success bg-gradient"
             >
-            Enviar
+            <i class="bi bi-cursor-fill"></i>
             </button>
           </div>
         </div>
