style: :lipstick: Colors changed

--- a/public/index.html
+++ b/public/index.html
@@ -10,9 +10,9 @@
 </head>
 <body>
   <div class="container">
-    <div class="row text-center bg-success bg-gradient p-2 my-2 rounded">
-      <h3 style='color: white;'>WebChat 
-        <i class="bi bi-chat" style='color: white;'></i>
+    <div class="row text-center bg-gradient p-2 my-2 rounded" style="background-color: #6D3F91">
+      <h3 style='color: #EBAC29;'>WebChat 
+        <i class="bi bi-chat" style='color: #EBAC29;'></i>
       </h3>
     </div>
     <div class="row heigth">
@@ -36,7 +36,8 @@
             type="submit"
             data-testid="nickname-button"
             id="nicknameButton"
-            class="btn btn-success bg-success bg-gradient"
+            class="btn bg-gradient"
+            style="background-color: #6D3F91; border-color: #6D3F91; color: #EBAC29;"
             >
             <i class="bi bi-pencil-square"></i>
             </button>
@@ -60,7 +61,8 @@
               type="submit"
               data-testid="send-button"
               id="sendButton"
-              class="btn btn-success bg-success bg-gradient"
+              class="btn bg-gradient"
+              style="background-color: #6D3F91; border-color: #6D3F91; color: #EBAC29;"
             >
             <i class="bi bi-cursor-fill"></i>
             </button>
