--- a/public/chat.html
+++ b/public/chat.html
@@ -58,7 +58,7 @@
           id='btn-msg'
           class='btn-msg'
           data-testid="send-button"
-        ><p id='btn-user' class='btn-input1'>user</p><p class='btn-input2'>/send</p>
+        ><p id='btn-user' class='btn-input1'>user</p><p class='btn-input2'>/Send</p>
         </button><p
           class='btn-input3'>:</p><p
           class='btn-input4'>~</P><p
